fix scrollbar autoHide

--- a/src/perfectscrollbar/css/style.less
+++ b/src/perfectscrollbar/css/style.less
@@ -13,6 +13,16 @@
     .ps__rail-x{
         opacity: 0.4;
     }
+    &.ps--active-y{
+        .ps__rail-y{
+            display: block!important;
+        }
+    }
+    &.ps--active-x{
+        .ps__rail-x{
+            display: block!important;
+        }
+    }
 }
 
 .ps__rail-x{
